--- a/index.html
+++ b/index.html
@@ -8,75 +8,76 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
 	<link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 	<header>
-		<nav>
-			<a href="./index.html">WebStudio</a>
+		<nav class="header-list">
+			<a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
 			<ul>
-				<li><a href="/">Studio</a></li>
-				<li><a href="/">Portfolio</a></li>
-				<li><a href="/">Contacts</a></li>
+				<li><a class="header-list-item" href="/">Studio</a></li>
+				<li><a class="header-list-item" href="/">Portfolio</a></li>
+				<li><a class="header-list-item" href="/">Contacts</a></li>
 			</ul>
 		</nav>
-		<address>
+		<address class="contact-list">
 			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				<li><a class="contact-list-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a class="contact-list-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
 			</ul>
 		</address>
 	</header>
 	
 	<main>
-		<section>
-			<h1>Effective Solutions for Your Business</h1>
-			<button type="button">Order Service</button>
+		<section class="banner">
+			<h1 class="banner-header">Effective Solutions for Your Business</h1>
+			<button class="banner-btn" type="button">Order Service</button>
 		</section>
 
-		<section>
+		<section class="main-info">
 			<h2>Content</h2>
-			<ul>
-				<li>
+			<ul class="main-info-list">
+				<li class="main-info-list-item">
 					<h3>Strategy</h3>
 					<p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
 				</li>
-				<li>
+				<li class="main-info-list-item">
 					<h3>Punctuality</h3>
 					<p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
 				</li>
-				<li>
+				<li class="main-info-list-item">
 					<h3>Diligence</h3>
 					<p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
 				</li>
-				<li>
+				<li class="main-info-list-item">
 					<h3>Technologies</h3>
 					<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 				</li>
 			</ul>
 		</section>
 
-		<section>
+		<section class="team">
 			<h2>Our Team</h2>
-			<ul>
-				<li>
+			<ul class="team-list">
+				<li class="team-list-item">
 					<img src="./images/markguerrero.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
 						width="264" height="260">
 					<h3>Mark Guerrero</h3>
 					<p>Product Designer</p>
 				</li>
-				<li>
+				<li class="team-list-item">
 					<img src="./images/tomford.jpg" alt="a photo of smiling 27 years old man in a blue shirt" width="264" height="260">
 					<h3>Tom Ford</h3>
 					<p>Frontend Developer</p>
 				</li>
-				<li>
+				<li class="team-list-item">
 					<img src="./images/camilagarcia.jpg" alt="a photo of a long-haired woman in a pink blouse" width="264" height="260">
 					<h3>Camila Garcia</h3>
 					<p>Marketing</p>
 				</li>
-				<li>
+				<li class="team-list-item">
 					<img src="./images/danielwilson.jpg" alt="a photo of smiling 25 years old man with a beard wearing a grey T-shirt"
 					width="264" height="260">
 					<h3>Daniel Wilson</h3>
@@ -85,42 +86,42 @@
 			</ul>
 		</section>
 
-		<section>
+		<section class="portfolio">
 			<h2>Our Portfolio</h2>
-			<ul>
-				<li>
-					<img src="./images/bankapp.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+			<ul class="portfolio-list">
+				<li class="portfolio-list-item">
+					<img src="./images/bankapp.jpg" alt="picture of screenshots of application pages"
+						width="360" height="260">
 					<h3>Banking App</h3>
 					<p>App</p>
 				</li>
-				<li>
-					<img src="./images/cashless.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+				<li class="portfolio-list-item">
+					<img src="./images/cashless.jpg" alt="a photo of pay by phone using QR-code in the application"
+						width="360" height="300">
 					<h3>Cashless Payment</h3>
 					<p>Marketing</p>
 				</li>
-				<li>
-					<img src="./images/mediationapp.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+				<li class="portfolio-list-item">
+					<img src="./images/mediationapp.jpg" alt="a photo of a laptop with a banner that says return to normalcy and the phone with a banner that says life in the future"
+						width="360" height="300">
 					<h3>Meditation App</h3>
 					<p>App</p>
 				</li>
-				<li>
-					<img src="./images/taxi.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+				<li class="portfolio-list-item">
+					<img src="./images/taxi.jpg" alt="a photo of the driver in the car with the included taxi app on the phone"
+						width="360" height="300">
 					<h3>Taxi Service</h3>
 					<p>Marketing</p>
 				</li>
-				<li>
-					<img src="./images/screenillustrations.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+				<li class="portfolio-list-item">
+					<img src="./images/screenillustrations.jpg" alt="a photo of the phone with a screensaver from the application which depicts the moon, as well as screenshots of other similar screensavers"
+						width="360" height="300">
 					<h3>Screen Illustrations</h3>
 					<p>Design</p>
-				</li>
+				</li class="portfolio-list-item">
 				<li>
-					<img src="./images/onlinecourses.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
-						width="264" height="260">
+					<img src="./images/onlinecourses.jpg" alt="a photo of a happy girl with a short haircut with a phone in one hand and an earphone in the other hand in orange glasses, a gray cap, an orange sweater"
+						width="360" height="300">
 					<h3>Online Courses</h3>
 					<p>Marketing</p>
 				</li>
@@ -129,8 +130,8 @@
 	</main>
 
 	<footer>
-		<a href="./index.html">WebStudio</a>
-		<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+		<a class="footer-logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+		<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 	</footer>
 </body>
 </html>
