--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 						width="360" height="300">
 					<h3>Screen Illustrations</h3>
 					<p>Design</p>
-				</li class="portfolio-list-item">
-				<li>
+				</li>
+				<li class="portfolio-list-item">
 					<img src="./images/onlinecourses.jpg" alt="a photo of a happy girl with a short haircut with a phone in one hand and an earphone in the other hand in orange glasses, a gray cap, an orange sweater"
 						width="360" height="300">
 					<h3>Online Courses</h3>
