--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 	<header>
 		<nav class="header-list">
-			<a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+			<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
 			<ul>
-				<li><a class="header-list-item" href="/">Studio</a></li>
-				<li><a class="header-list-item" href="/">Portfolio</a></li>
-				<li><a class="header-list-item" href="/">Contacts</a></li>
+				<li><a class="header-list-item" href="">Studio</a></li>
+				<li><a class="header-list-item" href="">Portfolio</a></li>
+				<li><a class="header-list-item" href="">Contacts</a></li>
 			</ul>
 		</nav>
 		<address class="contact-list">
@@ -37,100 +37,100 @@
 		</section>
 
 		<section class="main-info">
-			<h2>Content</h2>
+			<h2 class="main-info-header">Content</h2>
 			<ul class="main-info-list">
 				<li class="main-info-list-item">
-					<h3>Strategy</h3>
-					<p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+					<h3 class="main-info-list-item-header">Strategy</h3>
+					<p class="main-info-list-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
 				</li>
 				<li class="main-info-list-item">
-					<h3>Punctuality</h3>
-					<p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+					<h3 class="main-info-list-item-header">Punctuality</h3>
+					<p class="main-info-list-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
 				</li>
 				<li class="main-info-list-item">
-					<h3>Diligence</h3>
-					<p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+					<h3 class="main-info-list-item-header">Diligence</h3>
+					<p class="main-info-list-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
 				</li>
 				<li class="main-info-list-item">
-					<h3>Technologies</h3>
-					<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+					<h3 class="main-info-list-item-header">Technologies</h3>
+					<p class="main-info-list-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 				</li>
 			</ul>
 		</section>
 
 		<section class="team">
-			<h2>Our Team</h2>
+			<h2 class="team-header">Our Team</h2>
 			<ul class="team-list">
 				<li class="team-list-item">
 					<img src="./images/markguerrero.jpg" alt="a photo of a smiling 35 years old man with a beard in a blue shirt"
 						width="264" height="260">
-					<h3>Mark Guerrero</h3>
-					<p>Product Designer</p>
+					<h3 class="main-info-list-item-header">Mark Guerrero</h3>
+					<p class="main-info-list-item-text">Product Designer</p>
 				</li>
 				<li class="team-list-item">
 					<img src="./images/tomford.jpg" alt="a photo of smiling 27 years old man in a blue shirt" width="264" height="260">
-					<h3>Tom Ford</h3>
-					<p>Frontend Developer</p>
+					<h3 class="main-info-list-item-header">Tom Ford</h3>
+					<p class="main-info-list-item-text">Frontend Developer</p>
 				</li>
 				<li class="team-list-item">
 					<img src="./images/camilagarcia.jpg" alt="a photo of a long-haired woman in a pink blouse" width="264" height="260">
-					<h3>Camila Garcia</h3>
-					<p>Marketing</p>
+					<h3 class="main-info-list-item-header">Camila Garcia</h3>
+					<p class="main-info-list-item-text">Marketing</p>
 				</li>
 				<li class="team-list-item">
 					<img src="./images/danielwilson.jpg" alt="a photo of smiling 25 years old man with a beard wearing a grey T-shirt"
 					width="264" height="260">
-					<h3>Daniel Wilson</h3>
-					<p>UI Designer</p>
+					<h3 class="main-info-list-item-header">Daniel Wilson</h3>
+					<p class="main-info-list-item-text">UI Designer</p>
 				</li>
 			</ul>
 		</section>
 
 		<section class="portfolio">
-			<h2>Our Portfolio</h2>
+			<h2 class="team-header">Our Portfolio</h2>
 			<ul class="portfolio-list">
 				<li class="portfolio-list-item">
 					<img src="./images/bankapp.jpg" alt="picture of screenshots of application pages"
 						width="360" height="260">
-					<h3>Banking App</h3>
-					<p>App</p>
+					<h3 class="main-info-list-item-header">Banking App</h3>
+					<p class="main-info-list-item-text">App</p>
 				</li>
 				<li class="portfolio-list-item">
 					<img src="./images/cashless.jpg" alt="a photo of pay by phone using QR-code in the application"
 						width="360" height="300">
-					<h3>Cashless Payment</h3>
-					<p>Marketing</p>
+					<h3 class="main-info-list-item-header">Cashless Payment</h3>
+					<p class="main-info-list-item-text">Marketing</p>
 				</li>
 				<li class="portfolio-list-item">
 					<img src="./images/mediationapp.jpg" alt="a photo of a laptop with a banner that says return to normalcy and the phone with a banner that says life in the future"
 						width="360" height="300">
-					<h3>Meditation App</h3>
-					<p>App</p>
+					<h3 class="main-info-list-item-header">Meditation App</h3>
+					<p class="main-info-list-item-text">App</p>
 				</li>
 				<li class="portfolio-list-item">
 					<img src="./images/taxi.jpg" alt="a photo of the driver in the car with the included taxi app on the phone"
 						width="360" height="300">
-					<h3>Taxi Service</h3>
-					<p>Marketing</p>
+					<h3 class="main-info-list-item-header">Taxi Service</h3>
+					<p class="main-info-list-item-text">Marketing</p>
 				</li>
 				<li class="portfolio-list-item">
 					<img src="./images/screenillustrations.jpg" alt="a photo of the phone with a screensaver from the application which depicts the moon, as well as screenshots of other similar screensavers"
 						width="360" height="300">
-					<h3>Screen Illustrations</h3>
-					<p>Design</p>
+					<h3 class="main-info-list-item-header">Screen Illustrations</h3>
+					<p class="main-info-list-item-text">Design</p>
 				</li>
 				<li class="portfolio-list-item">
 					<img src="./images/onlinecourses.jpg" alt="a photo of a happy girl with a short haircut with a phone in one hand and an earphone in the other hand in orange glasses, a gray cap, an orange sweater"
 						width="360" height="300">
-					<h3>Online Courses</h3>
-					<p>Marketing</p>
+					<h3 class="main-info-list-item-header">Online Courses</h3>
+					<p class="main-info-list-item-text">Marketing</p>
 				</li>
 			</ul>
 		</section>
 	</main>
 
-	<footer>
-		<a class="footer-logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+	<footer class="footer">
+		<a class="logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
 		<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 	</footer>
 </body>
