--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<nav class="header-list">
 			<a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
 			<ul>
-				<li><a class="header-list-item" href="">Studio</a></li>
+				<li><a class="header-list-item" href="./index.html">Studio</a></li>
 				<li><a class="header-list-item" href="">Portfolio</a></li>
 				<li><a class="header-list-item" href="">Contacts</a></li>
 			</ul>
